# ugc_sprint_2

./: .gitignore  README.md
db_test/: README.md  docker-compose.yml
db_test/test_databases/: Dockerfile  config.py  es_test.py  mongo_test.py  req.txt  run.py  run.sh
elk_solution/: .env.example  docker-compose.dev.yml  docker-compose.yml
elk_solution/deploy/: logstash.conf
elk_solution/fastapi-solution/: .env.example  .gitignore  Dockerfile  pyproject.toml  wait-for-db-and-run.sh
elk_solution/fastapi-solution/src/: main.py  settings.py
elk_solution/fastapi-solution/src/api/v1/: films.py  genres.py  persons.py  service.py
elk_solution/fastapi-solution/src/core/: config.py  logger.py
elk_solution/fastapi-solution/src/db/: elastic.py  redis_db.py
elk_solution/fastapi-solution/src/models/: film.py  genre.py  person.py
elk_solution/fastapi-solution/src/services/: auth.py  film.py  genre.py  person.py
ugc_solution/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
ugc_solution/nginx/: default.conf  nginx.conf
ugc_solution/ugc_app/: .env.example  Dockerfile  Dockerfile.test  pyproject.toml  wait-for-db-and-run.sh
ugc_solution/ugc_app/app/: crud.py  database.py  main.py  models.py  schemas.py  service_functions.py
ugc_solution/ugc_app/app/api/v1/: endpoints.py  service.py
ugc_solution/ugc_app/app/core/: config.py  logger.py
ugc_solution/ugc_app/tests/: UGC_service.postman_collection.json  conftest.py  test_app.py
