[tool.poetry]
name = "ugc-app"
version = "0.1.0"
description = ""
authors = ["kimkanovsky <kimkanovsky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
motor = "^3.5.1"
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
